# schema-js

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  style.md
crates/base/: Cargo.toml  build.rs
crates/base/src/: error.rs  lib.rs  runner.rs  runtime.rs
crates/base/src/context/: context.rs
crates/base/src/helpers/: mod.rs
crates/base/src/manager/: mod.rs  task.rs  task_duration.rs
crates/base/src/manager/tasks/: mod.rs  reconcile_task.rs
crates/base/src/pool/: mod.rs  pool_provider.rs  runtime_pool.rs
crates/base/src/thread/: mod.rs
crates/base/test_cases/default-db/: SchemeJS.toml
crates/base/test_cases/default-db/public/tables/: products.ts  users.ts
crates/cli/: Cargo.toml
crates/cli/src/: flags.rs  main.rs
crates/cli/src/cmd/: init.rs  mod.rs  repl.rs  start.rs
crates/config/: Cargo.toml
crates/config/src/: default_config_values.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: emit.rs  lib.rs  transpiler.rs
crates/core/src/cache/: mod.rs
crates/core/src/js/: bootstrap.ts  fieldUtils.ts  global.ts
crates/core/src/loaders/: file_fetcher.rs  mod.rs
crates/core/src/util/: auth_token.rs  cache_db.rs  caches.rs  check.rs  deno_dir.rs  disk_cache.rs  emit.rs  errors_rt.rs  fetch_cacher.rs  fs.rs  http_util.rs  incremental_cache_db.rs  mod.rs  module_info.rs  path.rs
crates/core/src/util/http_cache/: local.rs
crates/data/: Cargo.toml
crates/data/src/: data_handler.rs  data_shard.rs  data_shard_header.rs  errors.rs  lib.rs  map_shard.rs  temp_map_shard.rs  temp_offset_types.rs
crates/data/src/fdm/: file_descriptor.rs  mod.rs
crates/data/src/index/: composite_key.rs  index_child.rs  index_type.rs  mod.rs  types.rs
crates/data/src/index/composite_key/: composite_key.rs  mod.rs
crates/data/src/index/data/: index_data_unit.rs  index_shard.rs  index_shard_header.rs  mod.rs
crates/data/src/index/implementations/: basic_file_index.rs  mod.rs
crates/data/src/index/keys/: index_key_sha256.rs  mod.rs  string_index.rs
crates/data/src/index/phantom/: mod.rs
crates/data/src/index/utils/: mod.rs
crates/data/src/index/vals/: raw_value.rs
crates/data/src/shard/: map_shard.rs  mod.rs  shard_collection.rs  temp_collection.rs  temp_map_shard.rs
crates/data/src/shard/shards/: mod.rs
crates/data/src/shard/shards/data_shard/: config.rs  (+3 more)
crates/data/src/utils/: fs.rs  hash.rs  mod.rs
crates/data/test_cases/data/: localdata_94902be2-338c-422c-a2eb-4bd0d9a8d4a8_0.data  tempdata_3689c6bd-9e4c-480a-9180-31f2fb539594  tempdata_95c1f0b5-9c23-433f-9f67-28b5ca02485a
crates/data/test_cases/fake-db-folder/3259de07-f96e-46f4-9708-e97250a75049/: data_0b1a4d95-3b9a-48b0-931d-d17791b1ca6a_1.data  data_71a4c2d6-169b-49b5-b498-52393c728896_2.data  data_d74a1ce6-2677-4511-97c7-9778696eaf42_0.data  data_f312e745-7d16-409c-9286-2841ddfa9d53_3.data
crates/data/test_cases/fake-db-folder/fake-empty-table/: data_c222a11d-c80f-4d6e-8c8a-7b83f79f9ef2_0.data
crates/data/test_cases/fake-db-folder/fake-partial-folder/: data_38af2223-d339-4f45-994e-eef41a69fcaa_2.data  data_9e9d8ad5-6f76-4720-85de-4ca2497a0231_0.data  data_c4cebac4-037c-4af7-9dc3-87829d5f0217_1.data
crates/engine/: Cargo.toml
crates/engine/src/: engine.rs  engine_db.rs  engine_table.rs  lib.rs  query_error.rs  validation_error.rs
crates/engine/src/js/: context.ts  ops.ts  query.ts
crates/engine/src/ops/: insert.rs  mod.rs  query.rs
crates/engine/src/rows/: json_row.rs  mod.rs
crates/engine/src/serializer/: borsh.rs  mod.rs
crates/engine/src/utils/: fs.rs
crates/graph/: Cargo.toml
crates/graph/src/: emitter.rs  eszip.rs  eszip_util.rs  lib.rs
crates/grpc/: Cargo.toml  build.rs
crates/grpc/proto/connection/: connection.proto
crates/grpc/proto/query/: query.proto
crates/grpc/proto/shared/: data_value.proto  row.proto
crates/grpc/src/: lib.rs  server.rs
crates/grpc/src/interceptors/: auth_interceptor.rs  mod.rs
crates/grpc/src/services/: connection.rs  macros.rs  mod.rs  shared.rs
crates/grpc/src/services/query/: custom_query.rs  insert.rs  mod.rs  query_data.rs
crates/grpc/src/utils/: common.rs  json.rs  mod.rs
crates/helpers/: Cargo.toml
crates/helpers/src/: helper.rs  lib.rs
crates/helpers/src/js/: helper.ts
crates/index/: Cargo.toml
crates/index/src/: errors.rs  index_keys.rs  index_type.rs  lib.rs  types.rs
crates/index/src/data/: index_data_unit.rs  index_shard.rs  mod.rs
crates/index/src/implementations/hash/: hash_index.rs  hash_index_header.rs  mod.rs
crates/index/src/keys/: index_key_sha256.rs  string_index.rs
crates/index/src/utils/: mod.rs
crates/index/src/vals/: mod.rs  raw_value.rs
crates/internal/: Cargo.toml
crates/internal/src/: lib.rs  manager.rs
crates/internal/src/auth/: auth_manager.rs  mod.rs  types.rs
crates/internal/src/users/: mod.rs  roles.rs  user.rs
crates/module_loader/: Cargo.toml
crates/module_loader/src/: lib.rs  runtime_providers.rs  standalone.rs  ts_module_loader.rs
crates/module_loader/src/internal/: auth_tokens.rs  cache_setting.rs  file_fetcher.rs  http_util.rs  mod.rs  versions.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: collection.rs  column.rs  database.rs  lib.rs  table.rs  types.rs
crates/primitives/src/column/: mod.rs  types.rs
crates/primitives/src/index/: mod.rs
crates/primitives/src/js/: column.ts  dataTypes.ts  index.ts  table.ts
crates/primitives/src/table/: metadata.rs  mod.rs
crates/query/: Cargo.toml
crates/query/src/: errors.rs  lib.rs  query_manager.rs  row.rs  row_json.rs
crates/query/src/managers/single/: mod.rs  query_shard.rs  query_shard_entry.rs  table_shard.rs
crates/query/src/ops/: index_handler.rs  mod.rs  query_ops.rs
crates/query/src/primitives/: mod.rs
crates/query/src/search/: mod.rs  search_manager.rs
crates/query/src/serializer/: borsh.rs  mod.rs
crates/query/src/utils/: index_utils.rs
crates/repl/: Cargo.toml
crates/repl/src/: errors.rs  lib.rs  query_state.rs
crates/repl/src/js/: repl.ts
crates/workers/: Cargo.toml
crates/workers/src/: context.rs
(+16 files in other folders)
