[package]
name = "base"
version = "0.1.0"
edition = "2021"

[dependencies]
deno_core.workspace = true
schemajs_primitives = { version = "0.1.0", path = "../primitives" }
schemajs_helpers = { version = "0.1.0", path = "../helpers" }
schemajs_workers = { version = "0.1.0", path = "../workers" }
schemajs_config = { version = "0.1.0", path = "../config" }
schemajs_engine = { version = "0.1.0", path = "../engine" }
schemajs_core = { version = "0.1.0", path = "../core" }
schemajs_module_loader = { version = "0.1.0", path = "../module_loader" }
schemajs_internal = { version = "0.1.0", path = "../internal" }
serde.workspace = true
anyhow.workspace = true
tokio.workspace = true
walkdir.workspace = true
deno_ast.workspace = true
uuid = { version = "1.10.0", features = ["v4"] }
tokio-util = { workspace = true, features = ["full"] }
r2d2.workspace = true
thiserror.workspace = true
serde_json.workspace = true
once_cell.workspace = true
scopeguard.workspace = true
dashmap.workspace = true

[build-dependencies]
schemajs_core = { version = "0.1.0", path = "../core" }
schemajs_primitives = { version = "0.1.0", path = "../primitives" }
schemajs_engine = { version = "0.1.0", path = "../engine" }
schemajs_helpers = { version = "0.1.0", path = "../helpers" }
deno_core.workspace = true