[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "A server based on Deno runtime, capable of running JavaScript, TypeScript, and WASM services"

[[bin]]
name = "schemejs"
path = "src/main.rs"

[dependencies]
base = { version = "0.1.0", path = "../base" }
tokio.workspace = true
anyhow.workspace = true