[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "schemajs"
path = "src/main.rs"

[dependencies]
base = { version = "0.1.0", path = "../base" }
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
schemajs_grpc = { version = "0.1.0", path = "../grpc" }
schemajs_internal = { version = "0.1.0", path = "../internal" }
colored = "2.1.0"
rustyline = "14.0.0"
enum-as-inner.workspace = true
serde_json.workspace = true
schemajs_helpers = { version = "0.1.0", path = "../helpers" }
schemajs_repl = { version = "0.1.0", path = "../repl" }
schemajs_core = { version = "0.1.0", path = "../core" }