[package]
name = "schemajs_config"
version = "0.1.0"
authors = ["Andres Pirela <andreespirela@outlook.com>"]
edition = "2021"
resolver = "2"
description = "We'll take care of this later"
license = "MIT"

[dependencies]
toml.workspace = true
serde.workspace = true
anyhow.workspace = true
paste.workspace = true