[package]
name = "schemajs_core"
version = "0.1.0"
authors = ["Andres Pirela <andreespirela@outlook.com>"]
edition = "2021"
resolver = "2"
description = "We'll take care of this later"
license = "MIT"

[dependencies]
deno_core.workspace = true
deno_ast = { workspace = true, features = ["transpiling", "bundler", "cjs", "codegen", "proposal", "react", "sourcemap", "transforms", "typescript", "view", "visit"] }
once_cell.workspace = true

data-url.workspace = true
base64 = "0.21.7"
tokio.workspace = true
indexmap.workspace = true
thiserror.workspace = true
libc = "0.2.155"
rand.workspace = true
percent-encoding.workspace = true
serde.workspace = true