[package]
name = "schemajs_data"
version = "0.1.0"
authors = ["Andres Pirela <andreespirela@outlook.com>"]
edition = "2021"
resolver = "2"
description = "We'll take care of this later"
license = "MIT"

[dependencies]
serde.workspace = true
tokio.workspace = true
tempfile.workspace = true
enum-as-inner.workspace = true
uuid.workspace = true
borsh.workspace = true
memmap2.workspace = true
sha2.workspace = true
rand.workspace = true
indexmap.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
lru.workspace = true
flaky_test.workspace = true