[package]
name = "schemajs_data"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
resolver = "2"

[dependencies]
serde.workspace = true
tokio.workspace = true
tempfile.workspace = true
enum-as-inner.workspace = true
uuid.workspace = true
borsh.workspace = true
memmap2.workspace = true
sha2.workspace = true
rand.workspace = true
indexmap.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
lru.workspace = true
flaky_test.workspace = true