[package]
name = "schemajs_engine"
version = "0.1.0"
authors = ["Andres Pirela <andreespirela@outlook.com>"]
edition = "2021"
resolver = "2"
description = "We'll take care of this later"
license = "MIT"

[dependencies]
deno_core.workspace = true
schemajs_primitives = { version = "0.1.0", path = "../primitives" }
serde.workspace = true
anyhow.workspace = true
chashmap.workspace = true
schemajs_data = { version = "0.1.0", path = "../data" }
schemajs_dirs = { version = "0.1.0", path = "../dirs" }
tokio.workspace = true
uuid.workspace = true
serde_json.workspace = true
borsh.workspace = true
enum-as-inner.workspace = true
thiserror.workspace = true
walkdir.workspace = true
schemajs_query = { version = "0.1.0", path = "../query" }

[dev-dependencies]
flaky_test.workspace = true