[package]
name = "schemajs_engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
resolver = "2"

[dependencies]
deno_core.workspace = true
schemajs_primitives = { version = "0.1.0", path = "../primitives" }
serde.workspace = true
anyhow.workspace = true
chashmap.workspace = true
schemajs_data = { version = "0.1.0", path = "../data" }
schemajs_dirs = { version = "0.1.0", path = "../dirs" }
tokio.workspace = true
uuid.workspace = true
serde_json.workspace = true
borsh.workspace = true
enum-as-inner.workspace = true
thiserror.workspace = true
walkdir.workspace = true
schemajs_query = { version = "0.1.0", path = "../query" }
schemajs_config = { version = "0.1.0", path = "../config" }
schemajs_helpers = { version = "0.1.0", path = "../helpers" }
parking_lot.workspace = true

[dev-dependencies]
flaky_test.workspace = true