[package]
name = "schemajs_graph"
version = "0.1.0"
authors = ["Andres Pirela <andreespirela@outlook.com>"]
edition = "2021"
resolver = "2"
description = "We'll take care of this later"
license = "MIT"

[dependencies]
import_map.workspace = true
deno_core.workspace = true
anyhow.workspace = true
eszip.workspace = true
deno_ast.workspace = true
deno_lockfile.workspace = true
deno_semver.workspace = true
deno_fs.workspace = true
schemajs_core = { version = "0.1.0", path = "../core" }
once_cell = "1.19.0"
deno_web.workspace = true
glob.workspace = true
serde.workspace = true