[package]
name = "schemajs_helpers"
version = "0.1.0"
authors = ["Andres Pirela <andreespirela@outlook.com>"]
edition = "2021"
resolver = "2"
description = "We'll take care of this later"
license = "MIT"

[dependencies]
deno_core.workspace = true
serde.workspace = true
serde_json.workspace = true
enum-as-inner.workspace = true
uuid.workspace = true
thiserror.workspace = true
tokio.workspace = true
r2d2.workspace = true
dashmap.workspace = true
schemajs_primitives = { version = "0.1.0", path = "../primitives" }