[package]
name = "schemajs_index"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
resolver = "2"

[dependencies]
serde.workspace = true
anyhow.workspace = true
enum-as-inner.workspace = true
schemajs_data = { version = "0.1.0", path = "../data" }
sha2.workspace = true
tokio.workspace = true
tempfile.workspace = true
uuid.workspace = true
rand.workspace = true
parking_lot.workspace = true