[package]
name = "schemajs_internal"
version = "0.1.0"
authors = ["Andres Pirela <andreespirela@outlook.com>"]
edition = "2021"
resolver = "2"
description = "We'll take care of this later"
license = "MIT"

[dependencies]
schemajs_primitives = { version = "0.1.0", path = "../primitives" }
serde.workspace = true
schemajs_engine = { path = "../engine" }
schemajs_query = { path = "../query" }
schemajs_config = { path = "../config" }
serde_json.workspace = true
bcrypt.workspace = true