[package]
name = "schemajs_internal"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
resolver = "2"

[dependencies]
schemajs_primitives = { version = "0.1.0", path = "../primitives" }
serde.workspace = true
schemajs_engine = { path = "../engine" }
schemajs_query = { path = "../query" }
schemajs_config = { path = "../config" }
serde_json.workspace = true
bcrypt.workspace = true
uuid.workspace = true
dashmap.workspace = true
parking_lot.workspace = true