[package]
name = "schemajs_module_loader"
version = "0.1.0"
authors = ["Andres Pirela <andreespirela@outlook.com>"]
edition = "2021"
resolver = "2"
description = "We'll take care of this later"
license = "MIT"

[dependencies]
deno_core.workspace = true
deno_ast = { workspace = true, features = ["transpiling", "bundler", "cjs", "codegen", "proposal", "react", "sourcemap", "transforms", "typescript", "view", "visit"] }
base64.workspace = true
eszip.workspace = true
schemajs_graph = { version = "0.1.0", path = "../graph" }
anyhow = "1.0.86"
once_cell = "1.19.0"
import_map.workspace = true
schemajs_core = { version = "0.1.0", path = "../core" }