[package]
name = "schemajs_primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
resolver = "2"

[dependencies]
deno_core.workspace = true
serde.workspace = true
serde_json.workspace = true
enum-as-inner.workspace = true
uuid.workspace = true
thiserror.workspace = true
schemajs_index = { version = "0.1.0", path = "../index" }