[package]
name = "schemajs_query"
version = "0.1.0"
authors = ["Andres Pirela <andreespirela@outlook.com>"]
edition = "2021"
resolver = "2"
description = "We'll take care of this later"
license = "MIT"

[dependencies]
serde = { workspace = true }
anyhow.workspace = true
enum-as-inner.workspace = true
schemajs_primitives = { version = "0.1.0", path = "../primitives" }
schemajs_data = { version = "0.1.0", path = "../data" }
thiserror.workspace = true
serde_json.workspace = true
borsh.workspace = true
ahash.workspace = true
chashmap.workspace = true
schemajs_dirs = { version = "0.1.0", path = "../dirs" }
uuid.workspace = true
tokio.workspace = true
tempfile.workspace = true
schemajs_index = { version = "0.1.0", path = "../index" }

[dev-dependencies]
flaky_test.workspace = true