[package]
name = "schemajs_repl"
version = "0.1.0"
authors = ["Andres Pirela <andreespirela@outlook.com>"]
edition = "2021"
resolver = "2"
description = "We'll take care of this later"
license = "MIT"

[dependencies]
deno_core.workspace = true
serde_json.workspace = true
schemajs_core = { version = "0.1.0", path = "../core" }
serde.workspace = true
enum-as-inner.workspace = true