[package]
name = "schemajs_repl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
resolver = "2"

[dependencies]
deno_core.workspace = true
serde_json.workspace = true
schemajs_core = { version = "0.1.0", path = "../core" }
serde.workspace = true
enum-as-inner.workspace = true