[package]
name = "schemajs_workers"
version = "0.1.0"
authors = ["Andres Pirela <andreespirela@outlook.com>"]
edition = "2021"
resolver = "2"
description = "We'll take care of this later"
license = "MIT"

[dependencies]
serde.workspace = true
anyhow.workspace = true
enum-as-inner.workspace = true
schemajs_config = { version = "0.1.0", path = "../config" }