[package]
name = "schemajs_workers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
resolver = "2"

[dependencies]
serde.workspace = true
anyhow.workspace = true
enum-as-inner.workspace = true
schemajs_config = { version = "0.1.0", path = "../config" }